--- a/index.html
+++ b/index.html
@@ -664,9 +664,9 @@
         <hr>
        <div class="row">
          <div class="col-lg-6 col-sm-12"><img class="p-2" src="assets/img/html.jpg"></div>
-         <div class="col-lg-6 col-sm-12"><img class="p-2" src="assets/img/html.jpg"></div>
-         <div class="col-lg-6 col-sm-12"><img class="p-2" src="assets/img/html.jpg"></div>
-         <div class="col-lg-6 col-sm-12"><img class="p-2" src="assets/img/html.jpg"></div>
+         <div class="col-lg-6 col-sm-12"><img class="p-2" src="assets/img/css.jpg"></div>
+         <div class="col-lg-6 col-sm-12"><img class="p-2" src="assets/img/php.jpg"></div>
+         <div class="col-lg-6 col-sm-12"><img class="p-2" src="assets/img/python.jpg"></div>
        </div>
       </div>
     </section>
